fixed navbar icon and links are in line, changed spacing on firat-background worked on text size,

--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,26 @@ body {
 }
 
 .nav-bar {
+        display: flex;
+        flex-direction: row;
+        justify-content:space-between;
+        align-content: center;
+        height: 2.7em;
+        margin: 0px 10px;
+       }
+
+.nav-container {
+    text-align: right;
+  
     display: flex;
     flex-direction: row;
     justify-content: right;
-    flex-wrap: wrap;
+}
 
+.karma-icon {
+   width: 1.5em; 
+   height: fit-content;
+   margin: 2px 0px  0px 10px ;
 }
 
 .nav-link {
@@ -18,19 +33,39 @@ body {
     text-decoration: none;
 }
 
+.nav-link:hover {
+color:  orangered;
+}
+
 .first-background {
     background-image: url("/img/first-background.jpg");
     background-color: light-gray;
+    background-size: cover;
    text-align: center;
-   padding-top: 5rem;
-   padding-bottom: 7rem;
+   padding-top: 7em;
+   padding-bottom: 12em;
+   margin: 0em 0em 4em 0em;
 }
 
-.first-background h2, .first-background p {
+ .first-background h2 {
     color: #fff;
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 2.5rem;
+    font-size: 24px;
+    font-weight: 100;
+    letter-spacing: 2px ;
 }
+
+.first-background h1
+{
+   color: #fff;
+   text-align: center;
+   margin-bottom: 1rem;
+   font-size: 40px;
+   font-weight: 200;
+   letter-spacing: 2px;
+}
+
 
 h2 ,h4 ,h5 {
     text-align: center;
